fixing icon spacing

--- a/style.css
+++ b/style.css
@@ -172,12 +172,13 @@ h5 {
 
 
 #contact-icon {
-	width: 40px;
-	height: 40px;
+	width: 60px;
+	height: 60px;
 	display: flex;
 	justify-content: center;
 	flex-direction: row;
 	margin-left: 25%;
+	padding: 5px 5px 5px 5px;
 }
 
 #flyer-img {
